fixed overflow in the places section

--- a/block/places/__body/places__body.css
+++ b/block/places/__body/places__body.css
@@ -7,5 +7,11 @@
     flex-direction: column;
     padding-left: 0px;
     padding-right: 0px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    max-width: 100vw;
   }
 }
